Fix Overflow Issues

--- a/styles.css
+++ b/styles.css
@@ -7,24 +7,26 @@
         linear-gradient(var(--blurple) .1em, transparent .1em),
         linear-gradient(90deg, var(--blurple) .1em, transparent .1em);
     background-size: 3em 3em;
-    display: flex;
-    z-index: 1;
     font-family: "Roboto", serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-variation-settings:
-        "wdth" 100;
+    font-variation-settings: "wdth" 100;
+}
+
+html {
+    overflow-x: hidden; 
+    height: 100%; 
 }
 
 body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100vh;
-    z-index: 2;
+    min-height: 100vh; 
     background-color: rgba(0, 0, 0, .5);
     background-image: linear-gradient(rgba(140, 0, 255, 0.1), rgba(112, 38, 172, 0.8));
+    overflow-x: hidden; 
 }
 
 .nav-container,
@@ -114,3 +116,195 @@ h1 {
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+#card-container {
+    margin: 7% 0%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+
+
+/* -------------------------------- 
+
+Buttons 
+
+-------------------------------- */
+
+.cd-btn {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    white-space: nowrap;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.375em;
+    font-size: 1em;
+    text-decoration: none;
+    line-height: 1.2;
+    cursor: pointer;
+    transition: 0.2s;
+    will-change: transform;
+  }
+  
+  .cd-btn:focus-visible {
+    outline: none;
+  }
+  
+  .cd-btn:active {
+    transform: translateY(2px);
+  }
+  
+  .cd-btn--primary {
+    background: hsl(250, 84%, 54%);
+    box-shadow: inset 0 1px 0 hsla(0, 0%, 100%, 0.15), 
+                0 1px 3px hsla(250, 84%, 38%, 0.25), 
+                0 2px 6px hsla(250, 84%, 38%, 0.1), 
+                0 6px 10px -2px hsla(250, 84%, 38%, 0.25);
+    color: hsl(0, 0%, 100%);
+  }
+  
+  .cd-btn--primary:hover {
+    background: hsl(250, 84%, 60%);
+    box-shadow: inset 0 1px 0 hsla(0, 0%, 100%, 0.15), 
+                0 1px 2px hsla(250, 84%, 38%, 0.25), 
+                0 1px 4px hsla(250, 84%, 38%, 0.1), 
+                0 3px 6px -2px hsla(250, 84%, 38%, 0.25);
+  }
+  
+  .cd-btn--primary:focus-visible {
+    box-shadow: inset 0 1px 0 hsla(0, 0%, 100%, 0.15), 
+                0 1px 2px hsla(250, 84%, 38%, 0.25), 
+                0 1px 4px hsla(250, 84%, 38%, 0.1), 
+                0 3px 6px -2px hsla(250, 84%, 38%, 0.25), 
+                0 0 0 2px hsl(0, 0%, 100%), 
+                0 0 0 4px hsl(250, 84%, 54%);
+  }
+  
+  /* -------------------------------- 
+  
+  Icons 
+  
+  -------------------------------- */
+  
+  .cd-icon {
+    --size: 1em;
+    font-size: var(--size);
+    height: 1em;
+    width: 1em;
+    display: inline-block;
+    color: inherit;
+    fill: currentColor;
+    line-height: 1;
+    flex-shrink: 0;
+    max-width: initial;
+  }
+  
+  .cd-icon use { /* SVG symbols - enable icon color corrections */
+    color: inherit;
+    fill: currentColor;
+  }
+  
+  /* -------------------------------- 
+  
+  Component 
+  
+  -------------------------------- */
+  
+  .card {
+    background-color: hsl(0, 0%, 100%);
+    box-shadow: 0 0 0 1px hsla(230, 13%, 9%, 0.05),
+                0 0.3px 0.4px hsla(230, 13%, 9%, 0.02),
+                0 0.9px 1.5px hsla(230, 13%, 9%, 0.045),
+                0 3.5px 6px hsla(230, 13%, 9%, 0.09);
+    border-radius: 0.375em;
+    overflow: hidden;
+    width: 50%;
+  }
+  
+  .card__img-wrapper img {
+    display: block;
+    width: 100%;
+  }
+  
+  .card__content {
+    padding: 1rem;
+    display: grid;
+    gap: 0.75rem;
+  }
+  
+  .card__description {
+    font-size: 0.9375rem;
+    color: hsl(225, 4%, 47%);
+  }
+  
+  .card__btn {
+    font-size: 0.9375rem;
+  }
+  
+  /* --link variation */
+  .card--link {
+    text-decoration: none;
+    display: block;
+    color: inherit;
+    transition: box-shadow 0.2s;
+  }
+  
+  .card--link:hover {
+    box-shadow: 0 0 0 1px hsla(230, 13%, 9%, 0.05),
+                0 0.9px 1.25px hsla(230, 13%, 9%, 0.025),
+                0 3px 5px hsla(230, 13%, 9%, 0.05),
+                0 12px 20px hsla(230, 13%, 9%, 0.09);
+  }
+  
+  .card--link .card__img-wrapper {
+    position: relative;
+  }
+  
+  .card--link .card__img-wrapper::after { /* overlay layer */
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: hsla(230, 13%, 9%, 0.6);
+    opacity: 0;
+    transition: 0.2s;
+  }
+  
+  .card__link-icon-wrapper {
+    position: absolute;
+    z-index: 1;
+    width: 64px;
+    height: 64px;
+    top: calc(50% - 32px);
+    left: calc(50% - 32px);
+    background-color: hsla(0, 0%, 100%, 0.9);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transform: scale(0.8);
+    transition: 0.2s;
+  }
+  
+  .card__link-icon-wrapper .cd-icon {
+    --size: 32px;
+    display: block;
+    color: hsl(230, 13%, 9%);
+  }
+  
+  .card--link:hover .card__img-wrapper::after {
+    opacity: 1;
+  }
+  
+  .card--link:hover .card__link-icon-wrapper {
+    opacity: 1;
+    transform: scale(1);
+  }
